fix yml for auto converting yes and no for true/false add tests for GetCaretakers fix tests